; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/i40e/extr_i40e_xsk.c_i40e_reuse_rx_buffer_zc.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/i40e/extr_i40e_xsk.c_i40e_reuse_rx_buffer_zc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i40e_ring = type { i64, i64, %struct.i40e_rx_buffer* }
%struct.i40e_rx_buffer = type { i32*, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.i40e_ring*, %struct.i40e_rx_buffer*)* @i40e_reuse_rx_buffer_zc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @i40e_reuse_rx_buffer_zc(%struct.i40e_ring* %0, %struct.i40e_rx_buffer* %1) #0 {
  %3 = alloca %struct.i40e_ring*, align 8
  %4 = alloca %struct.i40e_rx_buffer*, align 8
  %5 = alloca %struct.i40e_rx_buffer*, align 8
  %6 = alloca i64, align 8
  store %struct.i40e_ring* %0, %struct.i40e_ring** %3, align 8
  store %struct.i40e_rx_buffer* %1, %struct.i40e_rx_buffer** %4, align 8
  %7 = load %struct.i40e_ring*, %struct.i40e_ring** %3, align 8
  %8 = getelementptr inbounds %struct.i40e_ring, %struct.i40e_ring* %7, i32 0, i32 2
  %9 = load %struct.i40e_rx_buffer*, %struct.i40e_rx_buffer** %8, align 8
  %10 = load %struct.i40e_ring*, %struct.i40e_ring** %3, align 8
  %11 = getelementptr inbounds %struct.i40e_ring, %struct.i40e_ring* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = getelementptr inbounds %struct.i40e_rx_buffer, %struct.i40e_rx_buffer* %9, i64 %12
  store %struct.i40e_rx_buffer* %13, %struct.i40e_rx_buffer** %5, align 8
  %14 = load %struct.i40e_ring*, %struct.i40e_ring** %3, align 8
  %15 = getelementptr inbounds %struct.i40e_ring, %struct.i40e_ring* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  store i64 %16, i64* %6, align 8
  %17 = load i64, i64* %6, align 8
  %18 = add nsw i64 %17, 1
  store i64 %18, i64* %6, align 8
  %19 = load i64, i64* %6, align 8
  %20 = load %struct.i40e_ring*, %struct.i40e_ring** %3, align 8
  %21 = getelementptr inbounds %struct.i40e_ring, %struct.i40e_ring* %20, i32 0, i32 1
  %22 = load i64, i64* %21, align 8
  %23 = icmp slt i64 %19, %22
  br i1 %23, label %24, label %26

24:                                               ; preds = %2
  %25 = load i64, i64* %6, align 8
  br label %27

26:                                               ; preds = %2
  br label %27

27:                                               ; preds = %26, %24
  %28 = phi i64 [ %25, %24 ], [ 0, %26 ]
  %29 = load %struct.i40e_ring*, %struct.i40e_ring** %3, align 8
  %30 = getelementptr inbounds %struct.i40e_ring, %struct.i40e_ring* %29, i32 0, i32 0
  store i64 %28, i64* %30, align 8
  %31 = load %struct.i40e_rx_buffer*, %struct.i40e_rx_buffer** %4, align 8
  %32 = getelementptr inbounds %struct.i40e_rx_buffer, %struct.i40e_rx_buffer* %31, i32 0, i32 2
  %33 = load i32, i32* %32, align 4
  %34 = load %struct.i40e_rx_buffer*, %struct.i40e_rx_buffer** %5, align 8
  %35 = getelementptr inbounds %struct.i40e_rx_buffer, %struct.i40e_rx_buffer* %34, i32 0, i32 2
  store i32 %33, i32* %35, align 4
  %36 = load %struct.i40e_rx_buffer*, %struct.i40e_rx_buffer** %4, align 8
  %37 = getelementptr inbounds %struct.i40e_rx_buffer, %struct.i40e_rx_buffer* %36, i32 0, i32 0
  %38 = load i32*, i32** %37, align 8
  %39 = load %struct.i40e_rx_buffer*, %struct.i40e_rx_buffer** %5, align 8
  %40 = getelementptr inbounds %struct.i40e_rx_buffer, %struct.i40e_rx_buffer* %39, i32 0, i32 0
  store i32* %38, i32** %40, align 8
  %41 = load %struct.i40e_rx_buffer*, %struct.i40e_rx_buffer** %4, align 8
  %42 = getelementptr inbounds %struct.i40e_rx_buffer, %struct.i40e_rx_buffer* %41, i32 0, i32 1
  %43 = load i32, i32* %42, align 8
  %44 = load %struct.i40e_rx_buffer*, %struct.i40e_rx_buffer** %5, align 8
  %45 = getelementptr inbounds %struct.i40e_rx_buffer, %struct.i40e_rx_buffer* %44, i32 0, i32 1
  store i32 %43, i32* %45, align 8
  %46 = load %struct.i40e_rx_buffer*, %struct.i40e_rx_buffer** %4, align 8
  %47 = getelementptr inbounds %struct.i40e_rx_buffer, %struct.i40e_rx_buffer* %46, i32 0, i32 0
  store i32* null, i32** %47, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
